--- a/angular book project/angular-book-app/src/app/book/book.component.html
+++ b/angular book project/angular-book-app/src/app/book/book.component.html
@@ -1,4 +1,17 @@
 <div>
+    <h4>Store Book</h4>
+    <form [formGroup]="bookRef" (ngSubmit)="storeBookInfo()">
+        <label>BookName</label>
+        <input type="text" formControlName="name"/><br/>
+        <label>Author</label>
+        <input type="text" formControlName="author"/><br/>
+        <label>Price</label>
+        <input type="number" formControlName="price"/><br/>
+        <label>Image Url</label>
+        <input type="url" formControlName="imgSrc"/><br/>
+        <input type="submit" value="store book"/>
+        <input type="reset" value="reset"/>
+    </form>
     <h2>All Books Details</h2>
     <table>
         <tr>
